@@ -1,3 +1,4 @@
+* #5097: Fix pasting text between activities through the clipboard. (tomeu)
 * #4660: Use improved PS API which streamlines ShareActivity process (smcv)
 
 0.70.1
